# Lambda-Software-Center

./: .gitignore  AGENTS.md  CMakeLists.txt  DECISIONS.md  LICENSE  README.md  SESSION.md
data/: com.lambdasc.policy  featured.json
docs/: ConfirmDialog_changes.md  DetailPage.qml  arch_software_center_mockup.html  lambda-software-center-roadmap.md  lambda-software-center-ui-spec.md  main_changes.md
qml/: Theme.qml  main.qml
qml/components/: BadgePill.qml  ConfirmDialog.qml  FeaturedCard.qml  InstallButton.qml  NavGroup.qml  NavItem.qml  OrphanDialog.qml  PackageCard.qml  PkgbuildDialog.qml  ProgressDrawer.qml  SearchBar.qml  Sidebar.qml  SourceTabs.qml  StatusBar.qml  Topbar.qml  UpdatesBanner.qml
qml/pages/: BrowsePage.qml  DetailPage.qml  FeaturedPage.qml  InstalledPage.qml  RecentPage.qml  UpdatesPage.qml
src/: lsc-helper.cpp  main.cpp
src/backend/: IPackageBackend.h  Package.h  PackageSearchUtils.h  TransactionManager.cpp  TransactionManager.h
src/backend/aur/: AurBackend.cpp  AurBackend.h  AurBuilder.cpp  AurBuilder.h  AurClient.cpp  AurClient.h
src/backend/flatpak/: FlatpakBackend.cpp  FlatpakBackend.h
src/backend/pacman/: AlpmWrapper.cpp  AlpmWrapper.h  PacmanBackend.cpp  PacmanBackend.h
src/models/: InstalledModel.cpp  InstalledModel.h  InstalledModelAggregator.cpp  InstalledModelAggregator.h  PackageListModel.cpp  PackageListModel.h  UpdatesModel.cpp  UpdatesModel.h
src/service/: UpdateChecker.cpp  UpdateChecker.h
tests/: CMakeLists.txt  test_aur.cpp  test_flatpak.cpp  test_pacman.cpp  test_transaction.cpp
tests/models/: test_packagelistmodel.cpp
